# KNN-cpp-Server-and-Client

./: CMakeLists.txt  issues  makefile
src/: CMakeLists.txt  README
src/cli/: AlgoSettings.cpp  AlgoSettings.h  CLI.cpp  CLI.h  ClassifyData.cpp  ClassifyData.h  Command.cpp  Command.h  DefaultIO.cpp  DefaultIO.h  DisplayResults.cpp  DisplayResults.h  DownloadResults.cpp  DownloadResults.h  Exit.cpp  Exit.h  StandardIO.cpp  StandardIO.h  UploadCSV.cpp  UploadCSV.h  socketIO.cpp  socketIO.h
src/knnserver/: AbstractPeer.cpp  AbstractPeer.h  Client.cpp  Client.h  KNN_ClientServer.cpp  KNN_ClientServer.h  KNN_MainServer.cpp  KNN_MainServer.h
src/knnset/: ClassifiedVector.cpp  ClassifiedVector.h  KNN_Set.cpp  KNN_Set.h  VectorDist.cpp  VectorDist.h
src/main/: client_main.cpp  server_main.cpp
